fixed photos and caprate not showing, added some styling

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 header {
 
-    margin-top: 0;
+    margin: 0;
 
 }
 
@@ -17,7 +17,6 @@ form {
 
     display: inline-block;
     margin: 1em auto 1em auto;
-    text-align: left;    
     
 }
 
@@ -40,22 +39,50 @@ section h2 {
 
 }
 
+.start-form {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+
+
+
 .top {
 
     background-color: wheat;
-    margin: 1em;
-    padding: 1em;
-    text-align: center;
+    margin: 0;
+    padding: 0;
+    text-align: left;
+
+}
+
+h1 {
+
+    margin-left: 0;
+    padding-left: 1em;
+    margin-top: 0;
+    font-size: 1.5em;
+
+}
+
+.intro-text {
+
+    margin-left: 2em;
+    width: 100%;
 
 }
 
 .input-fields {
 
-    width: 20%;
+    width: 30%;
     display: flex;
     flex-direction: column;
+    text-align: left;
 
 }
+
 .small-fields {
 
     width: 15%;
@@ -72,17 +99,31 @@ section h2 {
 
 }
 
-.results {
+.result-boxes {
 
     display: flex;
-    flex-direction: column;
-    text-align: left;
+    flex-direction: row;
+    flex-wrap: wrap;
 
 }
 
-.results h2 {
+.results {
+
+    display: table;
+    margin: 0 auto;
+
+}
+
+.result-boxes h2 {
 
     text-align: center;
+    font-size: 1em;
+
+}
+
+.stats {
+
+    width: 40%;
 
 }
 
@@ -99,23 +140,18 @@ section h2 {
 
 }
 
-.place-image {
-
-    float: left;
-
-}
-
 .place-text {
 
-    display:flex;
+    display: flex;
     flex-direction: column;
     float: right;
     align-items: center;
+    font-size: 11px;
 
 }
 
 .place-photo {
 
-    width: 80%;
+    width: 100px;
 
 }
